Version 2.6.0
~~~~~~~~~~~~~
* New DATASTREAM parameter tSys that passes through into .input files
* vexpeek: new --scans option produces a listing of scans in the VEX file,
  useful to help select suitable scans for clock searches in early correlation
* Improved parsing of P-cal $IF if_def entries (vex1.5)
  - parse P-cal base frequency; allows a shifted P-cal
  - finer P-cal spacing; 'float' replaces 'int' in vex2difx and .input
  - Note: P-cal base frequency is not yet supported in .input file
* ANTENNA parameter polConvert can be set to true to indicate desire to perform polarization basis conversion on this antenna.  This will eliminate a warning that is not needed in this case.
* Added parameter exahustiveAutocorrs to allow correlation of cross-hand autocorrelations when polarisations are in different datastreams
* Support units in the clock rate (e.g., usec/sec).  This change generalizes unit support to allow time in numerators.
* Increase maximum number of allowed IFs from 4 to 32, and catch cases where this gets exceeded.

Version 2.5.0
~~~~~~~~~~~~~
* Users can now supply comments in one or more COMMENT { } blocks
* In the ANTENNA { } blocks, one can specify  machine =  to force a datastream
  process to be run on a particular machine for a particular antenna.
  * NOTE: the global "machines" parameter must be set, from which missing
    antenna machine assignments and the usual head / core processor
    assignments will be drawn.
* outPath global parameter added: all .difx/ output gets put here rather than ./
* Split vex2difx.cpp into smaller pieces (in progress)
* If baseband data files are provided via file lists and some jobs have
  missing data, exlude antennas as necessary and write a "nodata" file
* Allow phase cal interval of 200 MHz (KVN) without warning since extraction works
* Fix guardNS calculation (finally!)...
  - Needed to consider bits per sample and number of baseband channels